Add works in marketit

--- a/index.html
+++ b/index.html
@@ -96,27 +96,6 @@
         <div class="col s12 m6">
           <div class="card">
             <div class="card-image">
-              <img src="assets/img/mybitcoin1.png" />
-            </div>
-            <div class="card-content">
-              <span class="card-title grey-text text-darken-4">My Bitcoin</span>
-              <p>
-                Korbit API를 이용한 DB Serverless 웹 서비스 입니다.
-                <br />
-                한개의 페이지에서 원하는 정보를 간편하게 볼 수 있습니다. 또
-                수익률 계산기도 있습니다.
-              </p>
-            </div>
-            <div class="card-action">
-              <a href="https://github.com/AntonioMIN/KorbitAPI_WebService"
-                >GitHub에서 보기 <i class="material-icons">code</i></a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
               <img src="assets/img/comuiz/comuizpage.png" />
             </div>
             <div class="card-content">
@@ -172,7 +151,7 @@
       <p>
         <a href="https://dalgona.me">Dalgona</a>
         Full-Stack, Lead Developer(2017.5~2019.5)
-        <a href="workindalgona.html"
+        <a class="chip" href="workindalgona.html"
           ><span class="label label-primary">See works</span></a
         >
       </p>
@@ -180,7 +159,7 @@
       <p>
         <a href="https://marketit.asia/">MarketIt</a>
         Developer(RN, Web, REST API)(2019.5~)
-        <a href="workinmarketit.html"
+        <a class="chip" href="workinmarketit.html"
           ><span class="label label-primary">See works</span></a
         >
       </p>
