--- a/index.html
+++ b/index.html
@@ -1,206 +1,190 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-114342284-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+﻿<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Antonio Min - Software Developer</title><style>
+/* cspell:disable-file */
+/* webkit printing magic: print all background colors */
+html {
+	-webkit-print-color-adjust: exact;
+}
+* {
+	box-sizing: border-box;
+	-webkit-print-color-adjust: exact;
+}
 
-      gtag("config", "UA-114342284-1");
-    </script>
-    <meta charset="utf-8" />
+html,
+body {
+	margin: 0;
+	padding: 0;
+	background: #181818;
+}
+@media only screen {
+	body {
+		margin: 2em auto;
+		max-width: 900px;
+		color: #d9d9d9;
+	}
+}
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Antonio Min soft developer." />
-    <meta name="author" content="Antonio Min" />
+body {
+	line-height: 1.5;
+	white-space: pre-wrap;
+}
 
-    <title>Antonio Min</title>
+a,
+a.visited {
+	color: inherit;
+	text-decoration: underline;
+}
 
-    <!-- Compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <link href="assets/css/style.css" rel="stylesheet" />
-    <!--Import Google Icon Font-->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-  </head>
+.pdf-relative-link-path {
+	font-size: 80%;
+	color: #444;
+}
 
-  <body>
-    <div id="hero">
-      <div style="flex: 1">
-        <h1>SOFTWARE DEVELOPER</h1>
-        <h4>민병윤</h4>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="assets/img/hoseodormitorymenu/screenshot1.png" />
-            </div>
-            <div class="card-content">
-              <span class="card-title grey-text text-darken-4"
-                >Hoseo Dormitory Menu</span
-              >
-              <p>
-                오늘 석식은 뭐지? 밥먹으러 가기전에 간편하게 오늘의 메뉴를
-                확인할 수 있습니다.<br />
-                Xamarin과 웹 크롤링을 이용한 메뉴 어플리케이션입니다.<br />
-                오늘의 식단과 한 주 동안의 식단을 확인할 수 있습니다.
-              </p>
-            </div>
-            <div class="card-action">
-              <a
-                href="https://play.google.com/store/apps/details?id=com.antoniostudio.hoseodormitorymenu&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"
-                >스토어에서 보기 <i class="material-icons">shop</i></a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="assets/img/workflow/dashboard.png" />
-            </div>
-            <div class="card-content">
-              <span class="card-title grey-text text-darken-4">WorkFlow</span>
-              <p>
-                몸은 하나인데 해야할 일은 너무나 많죠? 하나하나 해보는건
-                어떠세요?
-                <br />
-                Xamarin Android를 통해서 만들어진 일정관리 어플리케이션입니다.
-                <br />
-                차례대로, 순서대로 해야할 일을 저장하고 진행하세요.
-              </p>
-            </div>
-            <div class="card-action">
-              <a
-                href="https://play.google.com/store/apps/details?id=com.antoniomin.workflow&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"
-                >스토어에서 보기 <i class="material-icons">shop</i></a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="assets/img/comuiz/comuizpage.png" />
-            </div>
-            <div class="card-content">
-              <span class="card-title grey-text text-darken-4">Comuiz</span>
-              <p>
-                퀴즈를 만들어 유저들과 즐길수 있는 웹 페이지입니다.
-                <br />
-                OX문제 부터 객관식 문제까지 자유롭게 만들수 있습니다.
-              </p>
-            </div>
-            <div class="card-action">
-              <a href="https://github.com/AntonioMIN/Comuiz"
-                >GitHub에서 보기 <i class="material-icons">code</i></a
-              >
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m6">
-          <div class="card">
-            <div class="card-image">
-              <img src="assets/img/dob.png" />
-            </div>
-            <div class="card-content">
-              <span class="card-title grey-text text-darken-4"
-                >Dobby's Budongsan</span
-              >
-              <p>
-                부동산 체크 리스트 서비스입니다.
-                <br />
-                체크 리스트를 이용해서 꼼꼼하게 둘러보세요.
-              </p>
-            </div>
-            <div class="card-action">
-              <a href="https://github.com/AntonioMIN/dobby-budongsan"
-                >GitHub에서 보기 <i class="material-icons">code</i></a
-              >
-              <a href="https://dobby-budongsan.web.app/"
-                >둘러보기 <i class="material-icons">home</i></a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
+h1,
+h2,
+h3 {
+	letter-spacing: -0.01em;
+	line-height: 1.2;
+	font-weight: 600;
+	margin-bottom: 0;
+}
 
-      <hr />
-      <h4>About</h4>
-      <h5>Who</h5>
-      <p>Name : 민병윤 (gvvvv1123@gmail.com)</p>
-      <p>Primary position : Back-end Developer</p>
-      <p>상상을 현실로 구현하는 재미. Software development</p>
-      <br />
-      <h5>Activities</h5>
-      <p>
-        <a href="https://dalgona.me">Dalgona</a>
-        Full-Stack, Lead Developer(2017.5~2019.5)
-        <a class="chip" href="workindalgona.html"
-          ><span class="label label-primary">See works</span></a
-        >
-      </p>
-      <h5>Jobs</h5>
-      <p>
-        <a href="https://marketit.asia/">MarketIt</a>
-        Developer(RN, Web, REST API)(2019.5~)
-        <a class="chip" href="workinmarketit.html"
-          ><span class="label label-primary">See works</span></a
-        >
-      </p>
-      <br />
-      <h5>Stack</h5>
-      <p><b>Software Development</b> - is important skill ever!</p>
-      <p>
-        Mobile develop with
-        <b>C# Xamarin, React Native, Flutter</b>
-      </p>
-      <p>
-        Web Development
-        <b>PHP, NodeJS, Python, ASP.NET Core, React, Vue, Hasura</b>
-      </p>
-      <p>
-        Datebase Development
-        <b>MySQL, PostgreSQL, Redis</b>
-      </p>
-      <p>Game Development <b>Unity</b></p>
-      <br />
-      <h5>Awards</h5>
-      <p>한국정보올림피아드 - 경남 금상 - 2016</p>
-      <p>한국정보올림피아드 - 전국 동상 - 2016</p>
-      <p>제 1 회 쿡앱스 게임 제작 공모전 - 금상 - 2017</p>
-      <br />
-      <h5>Education</h5>
-      <p>김해경원고등학교 - 2017 졸업</p>
-      <p>호서대학교 컴퓨터정보공학부 - 2017 입학, 재학</p>
-      <br />
-      <!--/row -->
-      <hr />
-      <h5>Other Projects</h5>
-      <p>
-        Algorithm project (2016.8) -
-        <a href="https://github.com/AntonioMIN/Minesweeper-solve-algorithm"
-          >Minesweeper solve algorithm</a
-        >
-      </p>
-      <br />
-    </div>
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  </body>
-</html>
+.page-title {
+	font-size: 2.5rem;
+	font-weight: 700;
+	margin-top: 0;
+	margin-bottom: 0.75em;
+}
+
+h1 {
+	font-size: 1.875rem;
+	margin-top: 1.875rem;
+}
+
+h2 {
+	font-size: 1.5rem;
+	margin-top: 1.5rem;
+}
+
+h3 {
+	font-size: 1.25rem;
+	margin-top: 1.25rem;
+}
+
+mark {
+	background-color: transparent;
+}
+
+img {
+	max-width: 100%;
+}
+
+@media only print {
+	img {
+		max-height: 100vh;
+		object-fit: contain;
+	}
+}
+
+@page {
+	margin: 1in;
+}
+
+ol,
+ul {
+	margin: 0;
+	margin-block-start: 0.6em;
+	margin-block-end: 0.6em;
+}
+
+li > ol:first-child,
+li > ul:first-child {
+	margin-block-start: 0.6em;
+}
+
+ul > li {
+	list-style: disc;
+}
+
+ul.toggle > li {
+	list-style: none;
+}
+
+ul {
+	padding-inline-start: 1.7em;
+}
+
+ul > li {
+	padding-left: 0.1em;
+}
+
+ol {
+	padding-inline-start: 1.6em;
+}
+
+ol > li {
+	padding-left: 0.2em;
+}
+
+.toggle {
+	padding-inline-start: 0em;
+	list-style-type: none;
+}
+
+/* Indent toggle children */
+.toggle > li > details {
+	padding-left: 1.7em;
+}
+
+.toggle > li > details > summary {
+	margin-left: -1.1em;
+}
+
+p {
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
+}
+
+.image {
+	border: none;
+	margin: 1.5em 0;
+	padding: 0;
+	border-radius: 0;
+	text-align: center;
+}
+
+.code,
+code {
+	background: rgba(135, 131, 120, 0.15);
+	border-radius: 3px;
+	padding: 0.2em 0.4em;
+	border-radius: 3px;
+	font-size: 85%;
+	tab-size: 2;
+}
+
+code {
+	color: #eb5757;
+}
+
+.code {
+	padding: 1.5em 1em;
+}
+
+.code-wrap {
+	white-space: pre-wrap;
+	word-break: break-all;
+}
+
+.code > code {
+	background: none;
+	padding: 0;
+	font-size: 100%;
+	color: inherit;
+}
+
+.sans { font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol"; }
+.code { font-family: "SFMono-Regular", Menlo, Consolas, "PT Mono", "Liberation Mono", Courier, monospace; }
+
+</style></head><body><div style="height: 6rem;"></div><article class="page sans"><header><h1 class="page-title">상상을 현실로, 개발자 민병윤</h1></header><div class="page-body"><p>Antonio Min &lt;gvvvv1123@gmail.com&gt;</p><p>Primary Position: Backend</p><p>
+</p><h1>Activities</h1><h2><a href="http://dalgona.me">Dalgona</a></h2><p><mark><code>Full-stack</code></mark> <mark><code>Lead Developer</code></mark> <mark><code>2017.5~2019.5</code></mark></p><p><mark><code>PHP</code></mark> <mark><code>RESTful</code></mark> <mark><code>React</code></mark></p><p>달고나는 LooRoo의 두번째 이름으로 엔터테이먼트 플랫폼 스타트업으로 수많은 신인들을 위한 플랫폼입니다. 신인과 팬, 광고주들을 위한 소통을 공간을 제공합니다.</p><p>팀의 핵심 개발자로서 기술결정과 개발 관리 등 개발에 관련된 전반적인 업무를 맡아 수행했습니다.</p><ul class="toggle"><li><details><summary>Works</summary><h3>LooRoo 투표 솔루션 개발</h3><p><mark><code>PHP</code></mark> <mark><code>MySql</code></mark></p><p>영상을 보고 투표를 하는 솔루션 개발 및 운영. LooRoo X 코치아 - 이벤트 진행</p><h3>Dalgona 플랫폼 개발</h3><p><mark><code>PHP</code></mark> <mark><code>React</code></mark> <mark><code>RESTful</code></mark></p><p>신인과 팬을 위한 영상 플랫폼과 기업 고객과 신인을 연결해주는 플랫폼이 합쳐진 형태의 서비스 개발</p></details></li></ul><h1>Jobs</h1><h2><a href="https://marketit.asia">MarketIt</a></h2><p><mark><code>Full-stack Developer</code></mark> <mark><code>2019.5~2021.7</code></mark></p><p><mark><code>PHP</code></mark> <mark><code>React Native</code></mark> <mark><code>RabbitMQ</code></mark> <mark><code>Redis</code></mark> <mark><code>Luigi</code></mark> <mark><code>Flask</code></mark></p><p>인플루언서 마켓팅 플렛폼으로 인플루언서 앱과 파트너 페이지, 리뷰 플러그인 등의 서비스를 운영합니다.</p><p>React Native 개발부터 CRM, 파트너 페이지, API, Bot 등 다양한 개발 부분에 참여하였습니다. 기존에 개발된 시스템 성능, 코드 품질 향상에 집중하여 업무를 수행했습니다.</p><ul class="toggle"><li><details><summary>Works</summary><h3><a href="https://play.google.com/store/apps/details?id=com.mspot&amp;hl=ko">마켓잇 파트너 어플 개발</a></h3><p><mark><code>React Native</code></mark> <mark><code>Redux</code></mark> <mark><code>2019.5~2019.8</code></mark></p><p>광고주 용 어플리케이션 개발에 참여하였습니다. 어플을 통해서 인플루언서 검색과 캠페인 진행 상황을 확인할 수 있습니다. React와 Xamarin 개발 경험으로 빠르게 학습하여 업무에 투입될 수 있었습니다.</p><h3>RESTful API 도입</h3><p><mark><code>PHP</code></mark> <mark><code>Slim Framework</code></mark> <mark><code>RESTful</code></mark> <mark><code>2019.8</code></mark></p><p>광고주 용 어플리케이션을 개발하면서 API 구조적 문제점을 경험하고 REST API 도입을 제안하였습니다. 기술 검토부터 POC를 걸쳐 기존 API를 옮기는 작업을 진행했습니다. 경영진의 개발 니즈에 맞춰 프레임워크를 선택하고 개발 가이드라인을 세워 체계화된 API를 개발할 수 있도록 하였습니다.</p><h3>캠페인 지급 시스템 개선</h3><p><mark><code>PHP</code></mark> <mark><code>2020.1~2020.2</code></mark></p><p>기존 일괄 처리 방식 시스템에서 실시간 방식으로 변경하면서 지급에 소요되는 시간을 없앴습니다. MongoDB 쿼리문을 차용하여 유저의 지표를 비즈니스 니즈에 맞춰 다양한 규칙으로 지급되도록 디자인 하였습니다.</p><h3>리뷰 플러그인 개선</h3><p><mark><code>PHP</code></mark> <mark><code>Redis</code></mark> <mark><code>2020.4</code></mark></p><p>트래픽이 많은 리뷰 플러그인 컨텐츠 조회 및 PV 갱신으로 잦은 데이터베이스 Read&amp;Update 작업을 줄이기 위해 Redis를 이용하여 캐싱 작업을 하였습니다.</p><figure class="image"><a href="https://appservice-img.s3.amazonaws.com/apps/vlQYvhYZJ1Qih9GillXDQC/KR/list/image?1599545009"><img style="width:1110px" src="https://appservice-img.s3.amazonaws.com/apps/vlQYvhYZJ1Qih9GillXDQC/KR/list/image?1599545009"/></a></figure><h3>인플루언서 자동 승인 봇 개선</h3><p><mark><code>Luigi</code></mark> <mark><code>Flask</code></mark> <mark><code>2020.4</code></mark></p><p>승인 파이프라인 구조적 개선과 부트스트래핑이 오래걸리고 재사용이 가능한 부분은 Flask API로 분리하여 배치 작업 시간을 크게 줄였습니다.</p></details></li></ul><h2><a href="https://www.ridicorp.com/">RIDI</a></h2><p><mark><code>Backend Engineer</code></mark> <mark><code>2021.8~</code></mark></p><p><mark><code>Typescript</code></mark> <mark><code>Kafka</code></mark> <mark><code>PHP</code></mark></p><p>CRM 백엔드 업무를 주로 수행하고 있습니다.</p><h1>Projects</h1><ul class="toggle"><li><details><summary><a href="https://dobby-budongsan.web.app/">Dobby&#x27;s Budongsan</a></summary><figure class="image"><a href="src/dob.png"><img style="width:630px" src="src/dob.png"/></a></figure><p><mark><code>Vue</code></mark> <mark><code>Parcel</code></mark> <mark><code>Firebase</code></mark></p><p>부동산 체크 리스트 서비스입니다. 체크 리스트를 이용해서 꼼꼼하게 둘러보세요.</p><p><code><a href="https://github.com/AntonioMIN/dobby-budongsan">Github</a></code></p></details></li></ul><ul class="toggle"><li><details><summary><a href="https://play.google.com/store/apps/details?id=com.antoniomin.workflow&amp;pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1">Workflow</a></summary><figure class="image"><a href="src/b2.png"><img style="width:1077px" src="src/b2.png"/></a></figure><p><mark><code>Xamarin</code></mark></p><p>몸은 하나인데 해야할 일은 너무나 많죠? 하나하나 해보는건 어떠세요? Xamarin Android를 통해서 만들어진 일정관리 어플리케이션입니다. 차례대로, 순서대로 해야할 일을 저장하고 진행하세요.</p></details></li></ul><ul class="toggle"><li><details><summary><a href="https://play.google.com/store/apps/details?id=com.antoniostudio.hoseodormitorymenu&amp;pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1">Hoseo Dormitory Menu</a></summary><figure class="image"><a href="src/a1.png"><img style="width:1077px" src="src/a1.png"/></a></figure><p><mark><code>Xamarin</code></mark></p><p>오늘 석식은 뭐지? 밥먹으러 가기전에 간편하게 오늘의 메뉴를 확인할 수 있습니다. Xamarin과 웹 크롤링을 이용한 메뉴 어플리케이션입니다. 오늘의 식단과 한 주 동안의 식단을 확인할 수 있습니다.</p></details></li></ul><ul class="toggle"><li><details><summary><a href="https://github.com/AntonioMIN/PlayYeogi">Comuiz</a></summary><figure class="image"><a href="src/comuizpage.png"><img style="width:1231px" src="src/comuizpage.png"/></a></figure><p><mark><code>PHP</code></mark> <mark><code>CodeIgniter</code></mark> <mark><code>MySql</code></mark></p><p>퀴즈를 만들어 유저들과 즐길수 있는 웹 페이지입니다. OX문제 부터 객관식 문제까지 자유롭게 만들수 있습니다.</p></details></li></ul><ul class="toggle"><li><details><summary><a href="https://github.com/AntonioMIN/Minesweeper-solve-algorithm">Minesweeper solve algorithm</a></summary><p><mark><code>C</code></mark></p><p>지뢰찾기 알고리즘</p></details></li></ul><h1>Awards</h1><ul class="bulleted-list"><li style="list-style-type:disc">한국정보올림피아드 - 경남 금상 - 2016</li></ul><ul class="bulleted-list"><li style="list-style-type:disc">한국정보올림피아드 - 전국 동상 - 2016</li></ul><ul class="bulleted-list"><li style="list-style-type:disc">제 1 회 쿡앱스 게임 제작 공모전 - 금상 - 2017</li></ul><h1>Educations</h1><ul class="bulleted-list"><li style="list-style-type:disc">김해경원고등학교 - 2017 졸업</li></ul><ul class="bulleted-list"><li style="list-style-type:disc">호서대학교 컴퓨터정보공학부 - 2017 입학, 재학</li></ul><p>
+</p></div></article></body></html>
