--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ gtag("config", "UA-114342284-1");
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="Antonio Min soft developer." />
 <meta name="author" content="Antonio Min" />
+<meta property="og:image" content="src/wall.jpg">
 <title>Antonio Min - Software Developer</title>
 <style>
 /* cspell:disable-file */
