deploy: 8930dcf611ffb27d43c886fad8379784da9ac956

--- a/index.html
+++ b/index.html
@@ -67,6 +67,26 @@
 <article class="post-list h-feed">
 <div class=post-header>
 <header>
+<h1 class="p-name post-title"><a class=u-url href=/posts/android-phone-server/>Android 휴대폰으로 홈 서버 만들기</a></h1>
+</header>
+</div>
+<div class="content post-summary p-summary">
+집에서 추가적인 비용없이 가지고 놀 서버가 있으면 좋겠다는 생각을 하고 있다가 전에 사용하던 Android 휴대폰으로 만들어보기로 했다.
+일단 로컬에 Docker로 사용하던 Postgresql을 옮기는걸 목표로 셋팅해봤다.
+사용기기 Sharp Aquos S3 퀄컴 스냅드래곤 630 SDM630 Platform (2.2 GHz) 4 GB LPDDR4X SDRAM, 64 GB Android 10 Termux F-Droid를 이용해서 Termux 를 설치해주면 Linux 환경을 사용할 수 있게된다.
+https://medium.com/junior-dev/how-to-re-purpose-your-old-android-phone-by-running-linux-on-it-1310df46b3fe 이 페이지를 따라서 ssh server 셋팅까지만 따라했다.
+</div>
+<div class=post-info>
+<div class="post-date dt-published">2022-02-26</div>
+<a class="post-hidden-url u-url" href=/posts/android-phone-server/>/posts/android-phone-server/</a>
+<a href class="p-name p-author post-hidden-author h-card" rel=me>Antonio Min</a>
+<div class=post-taxonomies>
+</div>
+</div>
+</article>
+<article class="post-list h-feed">
+<div class=post-header>
+<header>
 <h1 class="p-name post-title"><a class=u-url href=/posts/my-project-manage-on-notion/>내가 Notion으로 프로젝트 관리하는 방법</a></h1>
 </header>
 </div>
